Bug 1865774 - Allow WorkerThread::HasPendingEvents() can be accessed on the parent thread. r=asuth, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D194221