dom/workers/WorkerThread.h
@@ -84,6 +84,11 @@ class WorkerThread final : public nsThread {
 
   uint32_t RecursionDepth(const WorkerThreadFriendKey& aKey) const;
 
+  // Override HasPendingEvents to allow HasPendingEvents could be accessed by
+  // the parent thread. WorkerPrivate::IsEligibleForCC calls this method on the
+  // parent thread to check if there is any pending events on the worker thread.
+  NS_IMETHOD HasPendingEvents(bool* aHasPendingEvents) override;
+
   NS_INLINE_DECL_REFCOUNTING_INHERITED(WorkerThread, nsThread)
 
  private:
